# Quest

./: .gitignore  .gitmodules  README.md  pyproject.toml
evaluation/: flash_attn_monkey_patch.py  llama.py  mistral.py  quest_attention.py
evaluation/LongBench/: eval.py  pred.py
evaluation/LongBench/config/: model2maxlen.json  model2path.json
evaluation/passkey/: passkey.py
evaluation/pg19/: ppl_eval.py
kernels/: CMakeLists.txt
kernels/include/decode/: decode_attn.cuh  decode_handler.cuh  decode_page.cuh
kernels/include/prefill/: prefill.cuh
kernels/include/topk/: decode_select_k.cuh
kernels/src/bench/: bench_batch_decode.cu  bench_decode_select_k.cu  bench_max_possible.cu  bench_page.cu  bench_prefill.cu
kernels/src/include/: cpu_reference.h  cpu_utils.h
kernels/src/test/: test_batch_decode.cu  test_max_possible.cu  test_page.cu  test_prefill.cu
quest/: __init__.py
quest/models/: QuestAttention.py  __init__.py  llama.py
quest/ops/: CMakeLists.txt  setup.sh
quest/ops/csrc/: approx_attn.cu  batch_prefill.cu  bsk_ops.cu  bsk_ops.h  estimate.cu  page.cu  pytorch_extension_utils.h  rms_norm.cu  topk.cu
quest/tests/: test_approx_attention.py  test_decode_attention.py  test_estimate.py  test_prefill_attention.py  test_rope.py  test_topk.py
quest/utils/: __init__.py  controller.py  decode_wrapper.py  kv_cache.py  utils.py
scripts/: bench_efficiency_e2e.sh  bench_kernels.sh  bench_textgen.py  example_demo.py  example_textgen.py  longbench.sh  passkey.sh  ppl_eval.sh  profile_textgen.py
