[build-system]
requires = ["setuptools", "wheel", "packaging"]
build-backend = "setuptools.build_meta"

[project]
name = "quest"
version = "0.0.1"

dependencies = [
    "accelerate==0.23.0",
    "DataProperty==1.0.1",
    "datasets==2.14.5",
    "evaluate==0.4.0",
    "exceptiongroup==1.1.3",
    "fastapi==0.104.1",
    "fschat[model_worker,webui]",
    "ffmpy==0.3.1",
    "fsspec==2023.6.0",
    "ftfy==6.1.3",
    "huggingface-hub==0.20.1",
    "lm_eval==0.3.0",
    "numpy==1.26.0",
    "protobuf==4.24.4",
    "pybind11==2.11.1",
    "scikit-learn==1.3.1",
    "scipy==1.11.3",
    "sentencepiece==0.1.99",
    "torch==2.1.2",
    "tqdm==4.66.1",
    "tqdm-multiprocess==0.0.11",
    "tokenizers==0.13.3",
    "transformers==4.31.0",
    "triton==2.1.0",
    "zstandard==0.21.0",
    "packaging==24.0", 
    "ninja==1.11.1.1", 
    "jieba==0.42.1",
    "fuzzywuzzy==0.18.0",
    "rouge==1.0.1",
    "pytest==8.2.2",
    "textual==0.68.0",
]

[tool.setuptools.packages.find]
where = ["."]
